fixed extra white space at bottom page

--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -96,7 +96,8 @@ body.default-background {
 a.footer {
 position: absolute;
 right: 17%;
-bottom: -7%;
+bottom: 0;
+margin-bottom: 0.5rem;
 }
 a.footer:hover {
   color: $yellow !important;
